--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -76,6 +76,11 @@ body{
 	& h3{
 		font-weight: 600;
 	}
+	& .card{
+		max-width: 400px;
+		max-height: 450px;
+
+	}
 }
 
 /*===========================================================================-->
