--- a/scss/estilos.css
+++ b/scss/estilos.css
@@ -88,6 +88,11 @@ body {
   font-weight: 600;
 }
 
+#novedades .card {
+  max-width: 400px;
+  max-height: 450px;
+}
+
 /*===========================================================================-->
 <!--========== HORARIOS ====================================*/
 #horarios span {
