--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,1 +1,7 @@
 $color-footer-hover: #0d6efd;
+$colores_social:(
+    1:#35bf98,
+    2:green,
+    3:rgb(161, 47, 161),
+    4:rgb(193, 223, 26),
+);
