--- a/scss/_clases-aux.scss
+++ b/scss/_clases-aux.scss
@@ -3,3 +3,53 @@
 		@include links;
 		}
 }
+.separador{
+	font-family: 'Montserrat', sans-serif;	
+	background-color: black;
+	text-align: center;
+	font-size: 1.7rem;
+	font-weight: 700;
+	color: #fafafa;
+	padding: 1rem;
+	margin-top: 0;
+	margin-bottom: 0;
+	@media all and (max-width: 576px){
+		font-size: 1rem;
+		font-weight: 700;
+	}
+}
+
+.montserrat{
+	font-family: 'Montserrat', sans-serif;
+}
+
+.montserrat_h1{
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 800;
+	font-size: 4rem;
+}
+.precios{
+	font-family: 'Kdam Thmor Pro', sans-serif;
+}
+
+.gallery{
+	background-color: #dbddf1;
+	padding: 0 0;
+	margin-top: 0;
+	padding-bottom: 1rem;
+	margin-bottom: 1.5rem;
+	&:last-child{
+	margin-bottom: 4rem;
+	}
+	img{
+		background-color: #3fc9a5;
+		padding: 1rem;
+		width: 100%;
+		transition: 500ms;
+		box-shadow: 0 0 1rem rgba(0,0,0,0.3);
+		&:hover{
+			transform: scale(1.1);
+			background-color: rgba(63, 201, 164, 0.514);
+		}
+	}
+}
