--- a/scss/_fuentes.scss
+++ b/scss/_fuentes.scss
@@ -1,1 +1,1 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&family=Raleway:wght@300;700;900&family=Roboto:wght@300;400;500;900&display=swap');
