--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -2,6 +2,7 @@
     font-size: 2rem;
     padding: 0 1rem;
     color: #fafafa;
+    transition: 200ms;
     &:hover{
         color: $color-footer-hover;
     }
